--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -48,7 +48,7 @@ words, both lists will share the first list containing 5 and 10.
 Trying to implement this scenario using our definition of `List` with `Box<T>`
 won’t work, as shown in Listing 15-17:
 
-<span class="filename">Filename: src/main.rs</span>
+<span class="filename">檔案名稱：src/main.rs</span>
 
 ```rust,ignore,does_not_compile
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-17/src/main.rs}}
@@ -85,7 +85,7 @@ we call `Rc::clone`, the reference count to the data within the `Rc<List>` will
 increase, and the data won’t be cleaned up unless there are zero references to
 it.
 
-<span class="filename">Filename: src/main.rs</span>
+<span class="filename">檔案名稱：src/main.rs</span>
 
 ```rust
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-18/src/main.rs}}
@@ -119,7 +119,7 @@ counts changing as we create and drop references to the `Rc<List>` in `a`.
 In Listing 15-19, we’ll change `main` so it has an inner scope around list `c`;
 then we can see how the reference count changes when `c` goes out of scope.
 
-<span class="filename">Filename: src/main.rs</span>
+<span class="filename">檔案名稱：src/main.rs</span>
 
 ```rust
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-19/src/main.rs:here}}
