--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -54,7 +54,7 @@ won’t work, as shown in Listing 15-17:
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-17/src/main.rs}}
 ```
 
-<span class="caption">Listing 15-17: Demonstrating we’re not allowed to have
+<span class="caption">範例 15-17: Demonstrating we’re not allowed to have
 two lists using `Box<T>` that try to share ownership of a third list</span>
 
 When we compile this code, we get this error:
@@ -91,7 +91,7 @@ it.
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-18/src/main.rs}}
 ```
 
-<span class="caption">Listing 15-18: A definition of `List` that uses
+<span class="caption">範例 15-18: A definition of `List` that uses
 `Rc<T>`</span>
 
 We need to add a `use` statement to bring `Rc<T>` into scope because it’s not
@@ -125,7 +125,7 @@ then we can see how the reference count changes when `c` goes out of scope.
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-19/src/main.rs:here}}
 ```
 
-<span class="caption">Listing 15-19: Printing the reference count</span>
+<span class="caption">範例 15-19: Printing the reference count</span>
 
 At each point in the program where the reference count changes, we print the
 reference count, which we can get by calling the `Rc::strong_count` function.
