--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -37,7 +37,7 @@ of a third list. Conceptually, this looks similar to Figure 15-3:
 
 <img alt="Two lists that share ownership of a third list" src="img/trpl15-03.svg" class="center" />
 
-<span class="caption">Figure 15-3: Two lists, `b` and `c`, sharing ownership of
+<span class="caption">圖示 15-3: Two lists, `b` and `c`, sharing ownership of
 a third list, `a`</span>
 
 We’ll create list `a` that contains 5 and then 10. Then we’ll make two more
