--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -1,52 +1,26 @@
-## `Rc<T>`, the Reference Counted Smart Pointer
+## `Rc<T>` 引用計數智慧指標
 
-In the majority of cases, ownership is clear: you know exactly which variable
-owns a given value. However, there are cases when a single value might have
-multiple owners. For example, in graph data structures, multiple edges might
-point to the same node, and that node is conceptually owned by all of the edges
-that point to it. A node shouldn’t be cleaned up unless it doesn’t have any
-edges pointing to it.
+在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。
 
-To enable multiple ownership, Rust has a type called `Rc<T>`, which is an
-abbreviation for *reference counting*. The `Rc<T>` type keeps track of the
-number of references to a value which determines whether or not a value is
-still in use. If there are zero references to a value, the value can be cleaned
-up without any references becoming invalid.
+要有多重所有權的話，Rust 有一個型別叫做 `Rc<T>`，這是*引用計數（reference counting）*的簡寫。`Rc<T>` 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因爲不會產生任何無效引用。
 
-Imagine `Rc<T>` as a TV in a family room. When one person enters to watch TV,
-they turn it on. Others can come into the room and watch the TV. When the last
-person leaves the room, they turn off the TV because it’s no longer being used.
-If someone turns off the TV while others are still watching it, there would be
-uproar from the remaining TV watchers!
+想像 `Rc<T>` 是個在客廳裡的電視，當有人進入客廳要看電視時，它們就會打開它。其他人也能進來觀看電視。當最後一個人離開客廳時，它們會關掉電視，因爲沒有任何人會再看了。如果當其他人還在看電視時，有人關掉了它，其他在看電視的人肯定會生氣。
 
-We use the `Rc<T>` type when we want to allocate some data on the heap for
-multiple parts of our program to read and we can’t determine at compile time
-which part will finish using the data last. If we knew which part would finish
-last, we could just make that part the data’s owner, and the normal ownership
-rules enforced at compile time would take effect.
+`Rc<T>` 型別的使用時機在於當我們想要在堆積上分配一些資料給程式中數個部分讀取，但是我們無法在編譯時期決定哪個部分會最後一個結束使用數值的部分。如果我們知道哪個部分會最後結束的話，我們可以將那個部分作爲資料的擁有者就好，然後正常的所有權規則就會在編譯時生效。
 
-Note that `Rc<T>` is only for use in single-threaded scenarios. When we discuss
-concurrency in Chapter 16, we’ll cover how to do reference counting in
-multithreaded programs.
+注意到 `Rc<T>` 只適用於單一執行緒（single-threaded）的場合。當我們在第十六章討論並行（concurrency）時，我們會介紹如何在多執行緒程式達成引用計數。
 
-### Using `Rc<T>` to Share Data
+### 使用 `Rc<T>` 來分享資料
 
-Let’s return to our cons list example in Listing 15-5. Recall that we defined
-it using `Box<T>`. This time, we’ll create two lists that both share ownership
-of a third list. Conceptually, this looks similar to Figure 15-3:
+讓我們回顧範例 15-5 的 cons list 範例。回想一下我們當時適用 `Box<T>` 定義。這次我們會建立兩個列表，它們會同時共享第三個列表的所有權。概念上會如圖示 15-3 所示：
 
 <img alt="Two lists that share ownership of a third list" src="img/trpl15-03.svg" class="center" />
 
-<span class="caption">圖示 15-3: Two lists, `b` and `c`, sharing ownership of
-a third list, `a`</span>
+<span class="caption">圖示 15-3：兩個列表 `b` 和 `c` 共享第三個列表 `a` 的所有權</span>
 
-We’ll create list `a` that contains 5 and then 10. Then we’ll make two more
-lists: `b` that starts with 3 and `c` that starts with 4. Both `b` and `c`
-lists will then continue on to the first `a` list containing 5 and 10. In other
-words, both lists will share the first list containing 5 and 10.
+我們會建立列表 `a` 來包含 5 然後是 10。然後我們會在建立兩個列表：`b` 以 3 爲開頭而 `c` 以 4 爲開頭。`b` 與 `c` 列表會同時連接包含 5 與 10 的第一個列表 `a`。換句話說，兩個列表會同時共享包含 5 與 10 的第一個列表。
 
-Trying to implement this scenario using our definition of `List` with `Box<T>`
-won’t work, as shown in Listing 15-17:
+嘗試使用 `Box<T>` 來定義這種情境的 `List` 的話會無法成功，如範例 15-17 所示：
 
 <span class="filename">檔案名稱：src/main.rs</span>
 
@@ -54,36 +28,19 @@ won’t work, as shown in Listing 15-17:
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-17/src/main.rs}}
 ```
 
-<span class="caption">範例 15-17: Demonstrating we’re not allowed to have
-two lists using `Box<T>` that try to share ownership of a third list</span>
+<span class="caption">範例 15-17：展示我們無法用 `Box<T>` 讓兩個列表嘗試共享第三個列表的所有權</span>
 
-When we compile this code, we get this error:
+當我們編譯此程式碼，我們會得到以下錯誤：
 
 ```console
 {{#include ../listings/ch15-smart-pointers/listing-15-17/output.txt}}
 ```
 
-The `Cons` variants own the data they hold, so when we create the `b` list, `a`
-is moved into `b` and `b` owns `a`. Then, when we try to use `a` again when
-creating `c`, we’re not allowed to because `a` has been moved.
+`Cons` 變體擁有它們存有的資料，所以當我們建立列表 `b` 時，`a` 會移動到 `b`，所以 `b` 就擁有 `a`。然後當我們嘗試再次使用 `a` 來建立 `c` 時，這就不會被允許，因爲 `a` 已經被移走了。
 
-We could change the definition of `Cons` to hold references instead, but then
-we would have to specify lifetime parameters. By specifying lifetime
-parameters, we would be specifying that every element in the list will live at
-least as long as the entire list. The borrow checker wouldn’t let us compile
-`let a = Cons(10, &Nil);` for example, because the temporary `Nil` value would
-be dropped before `a` could take a reference to it.
+我們可以嘗試改用引用來變更 `Cons` 的定義，但是這樣我們就必須指定生命週期參數。透過指定生命週期參數，我們會指定列表中的每個元素會至少活得跟整個列表一樣久。舉例來說，這樣借用檢查器就不會讓我們編譯過 `let a = Cons(10, &Nil);`，因爲暫時的數值 `Nil` 會在 `a` 取得引用之前就被釋放。
 
-Instead, we’ll change our definition of `List` to use `Rc<T>` in place of
-`Box<T>`, as shown in Listing 15-18. Each `Cons` variant will now hold a value
-and an `Rc<T>` pointing to a `List`. When we create `b`, instead of taking
-ownership of `a`, we’ll clone the `Rc<List>` that `a` is holding, thereby
-increasing the number of references from one to two and letting `a` and `b`
-share ownership of the data in that `Rc<List>`. We’ll also clone `a` when
-creating `c`, increasing the number of references from two to three. Every time
-we call `Rc::clone`, the reference count to the data within the `Rc<List>` will
-increase, and the data won’t be cleaned up unless there are zero references to
-it.
+我們最後可以改用 `Rc<T>` 來變更 `List` 的定義，如範例 15-18 所示。每個 `Cons` 變體都會存有一個數值以及一個由 `Rc<T>` 指向的 `List`。當我們建立 `b` 時，不會取走 `a` 的所有權，我們會克隆（clone） `a` 存有的 `Rc<List>`，因而增加引用的數量從一增加到二，並讓 `a` 與 `b` 共享 `Rc<List>` 資料的所有權。我們也在在建立 `c` 時克隆 `a`，增加引用的數量從二增加到三。每次我們呼叫 `Rc::clone` 時，對 `Rc<List>` 資料的引用計數就會成增加，然後資料不會被清除直到沒有任何引用爲止。
 
 <span class="filename">檔案名稱：src/main.rs</span>
 
@@ -91,33 +48,17 @@ it.
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-18/src/main.rs}}
 ```
 
-<span class="caption">範例 15-18: A definition of `List` that uses
-`Rc<T>`</span>
+<span class="caption">範例 15-18：使用 `Rc<T>` 來定義 `List`</span>
 
-We need to add a `use` statement to bring `Rc<T>` into scope because it’s not
-in the prelude. In `main`, we create the list holding 5 and 10 and store it in
-a new `Rc<List>` in `a`. Then when we create `b` and `c`, we call the
-`Rc::clone` function and pass a reference to the `Rc<List>` in `a` as an
-argument.
+我們需要使用 `use` 陳述式來將 `Rc<T>` 引入作用域，因爲它沒有被包含在 prelude 中。在 `main` 中，我們建立了一個包含 5 與 10 的列表並存入 `a` 的 `Rc<List>`。然後當我們建立 `b` 與 `c` 時，我們會呼叫函式 `Rc::clone` 來將 `a` 的 `Rc<List>` 引用作爲引數傳入。
 
-We could have called `a.clone()` rather than `Rc::clone(&a)`, but Rust’s
-convention is to use `Rc::clone` in this case. The implementation of
-`Rc::clone` doesn’t make a deep copy of all the data like most types’
-implementations of `clone` do. The call to `Rc::clone` only increments the
-reference count, which doesn’t take much time. Deep copies of data can take a
-lot of time. By using `Rc::clone` for reference counting, we can visually
-distinguish between the deep-copy kinds of clones and the kinds of clones that
-increase the reference count. When looking for performance problems in the
-code, we only need to consider the deep-copy clones and can disregard calls to
-`Rc::clone`.
+當然我們可以呼叫 `a.clone()` 而非 `Rc::clone(&a)`，但是在此情形中 Rust 的慣例是使用 `Rc::clone`。`Rc::clone` 的實作不會像大多數型別的 `clone` 實作會深拷貝（deep copy）所有的資料。 `Rc::clone` 的呼叫只會增加引用計數，這花費的時間就相對很少。深拷貝通常會花費比較多的時間。透過使用 `Rc::clone` 來引用計數，我們可以以視覺辨別出這是深拷貝的克隆還是增加引用計數的克隆。當我們需要調查程式碼的效能問題時，我們就只需要考慮深拷貝的克隆，而不必在意 `Rc::clone`。
 
 ### Cloning an `Rc<T>` Increases the Reference Count
 
-Let’s change our working example in Listing 15-18 so we can see the reference
-counts changing as we create and drop references to the `Rc<List>` in `a`.
+讓我們改變範例 15-18 的範例，好讓我們能觀察引用計數在我們建立與釋放 `a` 的 `Rc<List>` 引用時產生的變化。
 
-In Listing 15-19, we’ll change `main` so it has an inner scope around list `c`;
-then we can see how the reference count changes when `c` goes out of scope.
+範例 15-19，我們改變了 `main` 讓列表 `c` 寫在一個內部作用域中，然後我們就能觀察到當 `c` 離開作用域時引用計數產生的改變。
 
 <span class="filename">檔案名稱：src/main.rs</span>
 
@@ -125,41 +66,24 @@ then we can see how the reference count changes when `c` goes out of scope.
 {{#rustdoc_include ../listings/ch15-smart-pointers/listing-15-19/src/main.rs:here}}
 ```
 
-<span class="caption">範例 15-19: Printing the reference count</span>
+<span class="caption">範例 15-19：印出引用計數</span>
 
-At each point in the program where the reference count changes, we print the
-reference count, which we can get by calling the `Rc::strong_count` function.
-This function is named `strong_count` rather than `count` because the `Rc<T>`
-type also has a `weak_count`; we’ll see what `weak_count` is used for in the
-[“Preventing Reference Cycles: Turning an `Rc<T>` into a
-`Weak<T>`”][preventing-ref-cycles]<!-- ignore --> section.
+在程式中每次引用計數產生改變的地方，我們就印出引用計數，我們可以透過呼叫函式 `Rc::strong_count` 來取得。此函式叫做 `strong_count` 而非 `count` 是因爲 `Rc<T>` 型別還有個 `weak_count`，我們會在 [「避免引用循環：將 `Rc<T>` 轉換成 `Weak<T>`」][preventing-ref-cycles]<!-- ignore --> 段落看到 `weak_count` 的使用方式。
 
-This code prints the following:
+此程式碼印出以下結果：
 
 ```console
 {{#include ../listings/ch15-smart-pointers/listing-15-19/output.txt}}
 ```
 
-We can see that the `Rc<List>` in `a` has an initial reference count of 1; then
-each time we call `clone`, the count goes up by 1. When `c` goes out of scope,
-the count goes down by 1. We don’t have to call a function to decrease the
-reference count like we have to call `Rc::clone` to increase the reference
-count: the implementation of the `Drop` trait decreases the reference count
-automatically when an `Rc<T>` value goes out of scope.
+我們可以看到 `a` 的 `Rc<List>` 會有個初始引用計數 1，然後我們每次呼叫 `clone` 時，計數會加 1。當 `c` 離開作用域時，計數會減 1。我們不必呼叫任何函式來減少引用計數，像呼叫 `Rc::clone` 時才會增加引用計數那樣。當 `Rc<T>` 數值離開作用域時，`Drop` 特徵的實作就會自動減少引用計數。
 
-What we can’t see in this example is that when `b` and then `a` go out of scope
-at the end of `main`, the count is then 0, and the `Rc<List>` is cleaned up
-completely at that point. Using `Rc<T>` allows a single value to have
-multiple owners, and the count ensures that the value remains valid as long as
-any of the owners still exist.
+我們無法從此例觀察到的是當 `b` 然後是 `a` 從 `main` 的結尾離開作用域時，計數會是 0，然後 `Rc<List>` 在此時就會完全被清除。使用 `Rc<T>` 能允許單一數值能有數個擁有者，然後計數會確保只要有任何擁有者還存在的狀況下，數值會保持是有效的。
 
-Via immutable references, `Rc<T>` allows you to share data between multiple
-parts of your program for reading only. If `Rc<T>` allowed you to have multiple
-mutable references too, you might violate one of the borrowing rules discussed
-in Chapter 4: multiple mutable borrows to the same place can cause data races
-and inconsistencies. But being able to mutate data is very useful! In the next
-section, we’ll discuss the interior mutability pattern and the `RefCell<T>`
-type that you can use in conjunction with an `Rc<T>` to work with this
-immutability restriction.
+透過不可變引用，`Rc<T>` 能讓你分享資料給程式中數個部分來只做讀取的動作。如果 `Rc<T>` 允許你也擁有數個可變引用的話，你可能就違反了第四章提及的借用規則：數個對相同位置的可變借用會導致資料競爭（data races）與不一致。但可變資料還是非常實用的！在下個段落，我們會討論內部可變性模式與 `RefCell<T>` 型別，此型別能讓你搭配 `Rc<T>` 使用來處理不可變的限制。
 
-[preventing-ref-cycles]: ch15-06-reference-cycles.html#preventing-reference-cycles-turning-an-rct-into-a-weakt
+[preventing-ref-cycles]: ch15-06-reference-cycles.html#避免引用循環將-rct-轉換成-weakt
+
+> - translators: [Ngô͘ Io̍k-ūi <wusyong9104@gmail.com>]
+> - commit: [e5ed971](https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch15-04-rc.md)
+> - updated: 2020-09-19
