--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,17 +1,12 @@
 ---
-name: 文章審核
-about: Tracking issue of review
-title: 文章審核：Ch 00-00
+name: 文章翻譯
+about: 'Tracking issue of translation '
+title: 文章翻譯：Ch 00-00
 labels: ''
 assignees: ''
 
 ---
 
-## 這篇文章：
+**請將 Assignee 設爲自己**
 
-- [] 沒有任何錯字
-- [] 沒有錯誤的術語
-- [] 語義都很通順
-- [] 範例都有中文化
-- [] 與官方最新 commit 內容符合
-- [] 至少兩（三）人審核通過
+註：一周後沒有 Pull Request 的話，Assignee 可以轉移給其他人
