--- a/.github/ISSUE_TEMPLATE/章節審核.md
+++ b/.github/ISSUE_TEMPLATE/章節審核.md
@@ -9,9 +9,10 @@ assignees: ''
 
 ## 此章節的所有文章：
 
-- [ ] 沒有任何錯別字
-- [ ] 沒有錯誤的術語，而且與其他篇章使用的術語均相同
-- [ ] 語義都很通順，如果有會閱讀困難或念起來不太通順的地方，我們希望可以改善，至少以信亞達爲目標，不必全部都得符合原文字句。
-- [ ] 範例都有中文化，Rust 的字串支援 UTF-8，所以說幾乎所有範例都可以用中文下字串或註解。
-- [ ] 與官方最新 commit 內容符合，沒有缺少或遺漏任何內容
-- [ ] 至少兩到三人在對應的 tracking isse 表示審核通過
+- [ ] Ch 00-00
+    - [ ] 沒有任何錯別字
+    - [ ] 沒有錯誤的術語，而且與其他篇章使用的術語均相同
+    - [ ] 語義都很通順，如果有會閱讀困難或念起來不太通順的地方，我們希望可以改善，至少以信亞達爲目標，不必全部都得符合原文字句。
+    - [ ] 範例都有中文化，Rust 的字串支援 UTF-8，所以說幾乎所有範例都可以用中文下字串或註解。
+    - [ ] 與官方最新 commit 內容符合，沒有缺少或遺漏任何內容
+- [ ] 至少兩到三人在此的 tracking isse 表示審核通過
