--- a/.github/ISSUE_TEMPLATE/章節審核.md
+++ b/.github/ISSUE_TEMPLATE/章節審核.md
@@ -20,4 +20,4 @@ assignees: ''
 - 與官方最新 commit 內容符合，沒有缺少或遺漏任何內容
 
 最後...
-- [ ] 至少兩到三人在此的 tracking isse 表示審核通過
+- [ ] 至少有一個專案維護者在對應的 tracking isse 表示審核通過
