--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -2,7 +2,7 @@
 
 在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。
 
-要有多重所有權的話，Rust 有一個型別叫做 `Rc<T>`，這是*引用計數（reference counting）*的簡寫。`Rc<T>` 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因爲不會產生任何無效引用。
+要有多重所有權的話，Rust 有一個型別叫做 `Rc<T>`，這是*引用計數（reference counting）* 的簡寫。`Rc<T>` 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因爲不會產生任何無效引用。
 
 想像 `Rc<T>` 是個在客廳裡的電視，當有人進入客廳要看電視時，它們就會打開它。其他人也能進來觀看電視。當最後一個人離開客廳時，它們會關掉電視，因爲沒有任何人會再看了。如果當其他人還在看電視時，有人關掉了它，其他在看電視的人肯定會生氣。
 
@@ -54,7 +54,7 @@
 
 當然我們可以呼叫 `a.clone()` 而非 `Rc::clone(&a)`，但是在此情形中 Rust 的慣例是使用 `Rc::clone`。`Rc::clone` 的實作不會像大多數型別的 `clone` 實作會深拷貝（deep copy）所有的資料。 `Rc::clone` 的呼叫只會增加引用計數，這花費的時間就相對很少。深拷貝通常會花費比較多的時間。透過使用 `Rc::clone` 來引用計數，我們可以以視覺辨別出這是深拷貝的克隆還是增加引用計數的克隆。當我們需要調查程式碼的效能問題時，我們就只需要考慮深拷貝的克隆，而不必在意 `Rc::clone`。
 
-### Cloning an `Rc<T>` Increases the Reference Count
+### 克隆 `Rc<T>` 實例會增加其引用計數
 
 讓我們改變範例 15-18 的範例，好讓我們能觀察引用計數在我們建立與釋放 `a` 的 `Rc<List>` 引用時產生的變化。
 
