Change italic of chinese parts to bold for visibility

--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -2,7 +2,7 @@
 
 在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。
 
-要有多重所有權的話，Rust 有一個型別叫做 `Rc<T>`，這是*引用計數（reference counting）* 的簡寫。`Rc<T>` 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因為不會產生任何無效引用。
+要有多重所有權的話，Rust 有一個型別叫做 `Rc<T>`，這是**引用計數**（reference counting）的簡寫。`Rc<T>` 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因為不會產生任何無效引用。
 
 想像 `Rc<T>` 是個在客廳裡的電視，當有人進入客廳要看電視時，它們就會打開它。其他人也能進來觀看電視。當最後一個人離開客廳時，它們會關掉電視，因為沒有任何人會再看了。如果當其他人還在看電視時，有人關掉了它，其他在看電視的人肯定會生氣。
 
