--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -1,6 +1,6 @@
 ## `Rc<T>` 引用計數智慧指標
 
-在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。
+在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在圖資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。
 
 要有多重所有權的話，Rust 有一個型別叫做 `Rc<T>`，這是**引用計數**（reference counting）的簡寫。`Rc<T>` 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因為不會產生任何無效引用。
 
